# eta-playground

./: README.md
101st-prime/: .gitignore  Main.hs  run.sh
101st-prime-via-epm-init/: 101st-prime.cabal  README.md  run.sh
101st-prime-via-epm-init/src/: Main.hs
fib-export/: fib-export.cabal
fib-export/src/: Main.hs
fib-export/src-java/: Main.java  README.md
fib-export/src-scala/: build.sbt
ghc-derive/: Main.hs
java-inheritance/: Main.hs
java-static-import/: java-static-import.cabal
java-static-import/src/: Main.hs
javafx-canvas-grid/: javafx-canvas-grid.cabal
javafx-canvas-grid/src/: CanvasGridApp.hs  EmptyCanvasApp.hs  Main.hs
javafx-canvas-grid/src/JavaFX/: Methods.hs  Types.hs
javafx-empty/: javafx-empty.cabal
javafx-empty-canvas/: javafx-empty-canvas.cabal
javafx-empty-canvas/src/: EmptyCanvasApp.hs
javafx-empty-canvas/src/JavaFX/: Core.hs  Methods.hs  Types.hs
javafx-empty-stage/: LICENSE  javafx-empty-stage.cabal
javafx-empty-stage/src/: EmptyStageApp.hs  Main.hs
javafx-empty-stage/src/JavaFX/: Methods.hs
javafx-empty/src/: EmptyApp.hs  Main.hs
javafx-empty/src/JavaFX/: Types.hs
javafx-square/: javafx-square.cabal
javafx-teastorm/: javafx-teastorm.cabal
javafx-teastorm/java/teastorm/: AnimationLoop.java
javafx-teastorm/src/: Main.hs  TeaStormApp.hs
javafx-teastorm/src/JavaFX/: Methods.hs  Types.hs
lens-example/: lens-example.cabal
scala-akka-stream-eta/: README.md  build.sbt
scala-akka-stream-eta-echoflow/: README.md
scala-akka-stream-eta-echoflow/src/main/eta/: scala-akka-stream-eta-echoflow.cabal
scala-akka-stream-eta-echoflow/src/main/eta/src/: Main.hs
scala-akka-stream-eta-echoflow/src/main/eta/src/AkkaStream/: Types.hs
scala-akka-stream-eta-wookiee/: README.md
scala-akka-stream-eta-wookiee/src/main/eta/: scala-akka-stream-eta-wookiee.cabal
scala-akka-stream-eta-wookiee/src/main/eta/src/: AkkaStream.hs  Main.hs
scala-akka-stream-eta-wookiee/src/main/eta/src/AkkaStream/: Exports.hs  Methods.hs
scala-akka-stream-eta-wookiee/src/main/scala/stream/: Main.scala
scala-akka-stream-eta/src/main/eta/: scala-akka-stream-eta.cabal
scala-akka-stream-eta/src/main/resources/: characters.json-stream
scala-akka-stream-eta/src/main/scala/stream/: Main.scala
simplest-ghc-program/: simplest-ghc-program.cabal
simplest-ghc-program/src/: Main.hs
(+2 files in other folders)
