name:                javafx-teastorm
version:             0.1.0.0
synopsis:            JavaFx implementation of the TeaStorm demo
homepage:            https://github.com/filippovitale/eta-playground/javafx-teastorm
license:             MIT
license-file:        LICENSE
author:              Filippo Vitale
maintainer:          fvitale@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable javafx-teastorm
  main-is:             Main.hs
  java-sources:        java/teastorm/AnimationLoop.java
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
