name:                scala-akka-stream-eta-wookiee
version:             0.1.0.0
synopsis:            Example of Scala integration
homepage:            https://github.com/filippovitale/eta-playground/tree/master/scala-akka-stream-eta-wookiee
license:             MIT
license-file:        LICENSE
author:              Filippo Vitale
maintainer:          fvitale@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable scala-akka-stream-eta-wookiee
  main-is:            Main.hs
  build-depends:      base >=4.8 && <4.9,
                      bytestring,
                      containers == 0.5.10.2,
                      aeson == 1.1.1.0
  hs-source-dirs:     src
  default-language:   Haskell2010
  maven-depends:      com.typesafe.akka:akka-stream_2.12:2.4.17
